if/c#/hpdf.cs


    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_Circle(IntPtr page,
                float x, float y, float ray);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_Arc(IntPtr page,
                float x, float y, float ray, float ang1, float ang2);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_Ellipse(IntPtr page,
                float x, float y, float xray, float yray);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_TextOut(IntPtr page,
                float xpos, float ypos, string text);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_TextRect(IntPtr page,
                float left, float top, float right, float bottom,
                string text, HPdfTextAlignment align, ref uint len);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetSlideShow(IntPtr page,
                HPdfTransitionStyle type, float disp_time, float trans_time);


    // handle to an instance of a HPDF_Doc object.
    private IntPtr hpage;

    public HPdfPage(IntPtr hpage) {
        if (hpage == IntPtr.Zero) {
            throw new Exception("cannot create HPdfPage object.");
        }

        this.hpage = hpage;
    }

    public void SetWidth(float value) {
        HPDF_Page_SetWidth(hpage, value);
    }

    public void SetHeight(float value) {
        HPDF_Page_SetHeight(hpage, value);
    }

    public void SetSize(HPdfPageSizes size,
            HPdfPageDirection direction) {
        HPDF_Page_SetSize(hpage, size, direction);
    }

    public void SetRotate(ushort angle) {
        HPDF_Page_SetRotate(hpage, angle);
    }

    public HPdfDestination CreateDestination() {
        IntPtr hdest;

        hdest = HPDF_Page_CreateDestination(hpage);
        return new HPdfDestination(hdest);
    }

    public HPdfAnnotation CreateTextAnnot(HPdfRect rect, string text,
            HPdfEncoder encoder) {
        IntPtr hannot;

        hannot = HPDF_Page_CreateTextAnnot(hpage, rect, text, encoder.GetHandle());
        return new HPdfAnnotation(hannot);
    }

    public HPdfAnnotation CreateLinkAnnot(HPdfRect rect, HPdfDestination dst) {
        IntPtr hannot;

        hannot = HPDF_Page_CreateLinkAnnot(hpage, rect, dst.GetHandle());
        return new HPdfAnnotation(hannot);
    }

    public HPdfAnnotation CreateURILinkAnnot(HPdfRect rect, string uri) {
        IntPtr hannot;

        hannot = HPDF_Page_CreateURILinkAnnot(hpage, rect, uri);
        return new HPdfAnnotation(hannot);
    }


    public float TextWidth(string text) {
        return HPDF_Page_TextWidth(hpage, text);
    }

    public uint MeasureText(string text, float width, bool wordwrap,
                ref float real_width) {
        int ww;

        if (wordwrap)
            ww = HPDF_TRUE;
        else
            ww = HPDF_FALSE;

        return HPDF_Page_MeasureText(hpage, text, width, ww, ref real_width);
    }

    public uint MeasureText(string text, float width, bool wordwrap) {
        float dummy = 0;
        int ww;

        if (wordwrap)
            ww = HPDF_TRUE;
        else
            ww = HPDF_FALSE;

        return HPDF_Page_MeasureText(hpage, text, width, ww, ref dummy);
    }

    public float GetWidth() {
        return HPDF_Page_GetWidth(hpage);
    }

    public float GetHeight() {
        return HPDF_Page_GetHeight(hpage);
    }

    public ushort GetGMode() {
        return HPDF_Page_GetGMode(hpage);
    }

    public HPdfPoint GetCurrentPos() {
        return HPDF_Page_GetCurrentPos(hpage);
    }

    public HPdfPoint GetCurrentTextPos() {
        return HPDF_Page_GetCurrentTextPos(hpage);
    }

    public HPdfFont GetCurrentFont() {
        return new HPdfFont(HPDF_Page_GetCurrentFont(hpage));
    }

    public float GetCurrentFontSize() {
        return HPDF_Page_GetCurrentFontSize(hpage);
    }

    public HPdfTransMatrix GetTransMatrix() {
        return HPDF_Page_GetTransMatrix(hpage);
    }

    public float GetLineWidth() {
        return HPDF_Page_GetLineWidth(hpage);
    }

    public HPdfLineCap GetLineCap() {
        return HPDF_Page_GetLineCap(hpage);
    }

    public HPdfLineJoin GetLineJoin() {
        return HPDF_Page_GetLineJoin(hpage);
    }

    public float GetMiterLimit() {
        return HPDF_Page_GetMiterLimit(hpage);
    }

    public HPdfDashMode GetDash() {
        HPdfDashMode_Internal mode1 = HPDF_Page_GetDash(hpage);
        HPdfDashMode mode2;

        mode2.phase = mode1.phase;
        mode2.ptn = new ushort[mode1.num_ptn];

        if (mode1.num_ptn >= 1)
            mode2.ptn[0] = mode1.ptn0;

        if (mode1.num_ptn >= 2)
            mode2.ptn[1] = mode1.ptn1;

        if (mode1.num_ptn >= 3)
            mode2.ptn[2] = mode1.ptn2;

        if (mode1.num_ptn >= 4)
            mode2.ptn[3] = mode1.ptn3;

        if (mode1.num_ptn >= 5)
            mode2.ptn[4] = mode1.ptn4;

        if (mode1.num_ptn >= 6)
            mode2.ptn[5] = mode1.ptn5;

        if (mode1.num_ptn >= 7)
            mode2.ptn[6] = mode1.ptn6;

        if (mode1.num_ptn >= 8)
            mode2.ptn[7] = mode1.ptn7;

        return mode2;
    }

    public float GetFlat() {
        return HPDF_Page_GetFlat(hpage);
    }

    public float GetCharSpace() {
        return HPDF_Page_GetCharSpace(hpage);
    }

    public float GetWordSpace() {
        return HPDF_Page_GetWordSpace(hpage);
    }

    public float GetHorizontalScalling() {
        return HPDF_Page_GetHorizontalScalling(hpage);
    }

    public float GetTextLeading() {
        return HPDF_Page_GetTextLeading(hpage);
    }

    public HPdfTextRenderingMode GetTextRenderingMode() {
        return HPDF_Page_GetTextRenderingMode(hpage);
    }

    public float GetTextRaise() {
        return HPDF_Page_GetTextRaise(hpage);
    }

    public HPdfRGBColor GetRGBFill() {
        return HPDF_Page_GetRGBFill(hpage);
    }

    public HPdfRGBColor GetRGBStroke() {
        return HPDF_Page_GetRGBStroke(hpage);
    }

    public HPdfCMYKColor GetCMYKFill() {
        return HPDF_Page_GetCMYKFill(hpage);
    }

    public HPdfCMYKColor GetCMYKStroke() {
        return HPDF_Page_GetCMYKStroke(hpage);
    }

    public float GetGrayFill() {
        return HPDF_Page_GetGrayFill(hpage);
    }

    public float GetGrayStroke() {
        return HPDF_Page_GetGrayStroke(hpage);
    }

    public HPdfColorSpace GetStrokingColorSpace() {
        return HPDF_Page_GetStrokingColorSpace(hpage);
    }

    public HPdfColorSpace GetFillingColorSpace() {
        return HPDF_Page_GetFillingColorSpace(hpage);
    }

    public HPdfTransMatrix GetTextMatrix() {
        return HPDF_Page_GetTextMatrix(hpage);
    }

    public uint GetGStateDepth() {
        return HPDF_Page_GetGStateDepth(hpage);
    }

    public void SetLineWidth(float line_width) {
        HPDF_Page_SetLineWidth(hpage, line_width);
    }

    public void SetLineCap(HPdfLineCap line_cap) {
        HPDF_Page_SetLineCap(hpage, line_cap);
    }

    public void SetLineJoin(HPdfLineJoin line_join) {
        HPDF_Page_SetLineJoin(hpage, line_join);
    }

    public void SetMiterLimit(float miter_limit) {
        HPDF_Page_SetMiterLimit(hpage, miter_limit);
    }

    public void SetDash(ushort[] dash_ptn, uint phase) {
        if (dash_ptn == null) {
            HPDF_Page_SetDash(hpage, dash_ptn, 0, 0);
            return;
        }

        int len = dash_ptn.Length;

        HPDF_Page_SetDash(hpage, dash_ptn, (uint)len, phase);
    }

    public void SetFlat(float flatness) {
        HPDF_Page_SetFlat(hpage, flatness);
    }

    public void SetExtGState(HPdfExtGState gstate) {
        HPDF_Page_SetExtGState(hpage, gstate.GetHandle());
    }

    public void GSave() {
        HPDF_Page_GSave(hpage);
    }

    public void GRestore() {
        HPDF_Page_GRestore(hpage);
    }

    public void Concat(float a, float b, float c, float d, float x, float y) {
        HPDF_Page_Concat(hpage, a, b, c, d, x, y);
    }

    public void MoveTo(float x, float y) {
        HPDF_Page_MoveTo(hpage, x, y);
    }

    public void LineTo(float x, float y) {
        HPDF_Page_LineTo(hpage, x, y);
    }

    public void CurveTo(float x1, float y1, float x2, float y2,
                float x3, float y3) {
        HPDF_Page_CurveTo(hpage, x1, y1, x2, y2, x3, y3);
    }

    public void CurveTo2(float x2, float y2, float x3, float y3) {
        HPDF_Page_CurveTo2(hpage, x2, y2, x3, y3);
    }

    public void CurveTo3(float x1, float y1, float x3, float y3) {
        HPDF_Page_CurveTo2(hpage, x1, y1, x3, y3);
    }

    public void ClosePath() {
        HPDF_Page_ClosePath(hpage);
    }

    public void Rectangle(float x, float y, float width, float height) {
        HPDF_Page_Rectangle(hpage, x, y, width, height);
    }

    public void Stroke() {
        HPDF_Page_Stroke(hpage);
    }

    public void ClosePathStroke() {
        HPDF_Page_ClosePathStroke(hpage);
    }

    public void Fill() {
        HPDF_Page_Fill(hpage);
    }

    public void Eofill() {
        HPDF_Page_Eofill(hpage);
    }

    public void FillStroke() {
        HPDF_Page_FillStroke(hpage);
    }

    public void EofillStroke() {
        HPDF_Page_EofillStroke(hpage);
    }

    public void ClosePathFillStroke() {
        HPDF_Page_ClosePathFillStroke(hpage);
    }

    public void ClosePathEofillStroke() {
        HPDF_Page_ClosePathEofillStroke(hpage);
    }

    public void EndPath() {
        HPDF_Page_EndPath(hpage);
    }

    public void Clip() {
        HPDF_Page_Clip(hpage);
    }

    public void Eoclip() {
        HPDF_Page_Eoclip(hpage);
    }

    public void BeginText() {
        HPDF_Page_BeginText(hpage);
    }

    public void EndText() {
        HPDF_Page_EndText(hpage);
    }

    public void SetCharSpace(float value) {
        HPDF_Page_SetCharSpace(hpage, value);
    }

    public void SetWordSpace(float value) {
        HPDF_Page_SetWordSpace(hpage, value);
    }

    public void SetHorizontalScalling(float value) {
        HPDF_Page_SetHorizontalScalling(hpage, value);
    }

    public void SetTextLeading(float value) {
        HPDF_Page_SetTextLeading(hpage, value);
    }

    public void SetFontAndSize(HPdfFont font, float size) {
        HPDF_Page_SetFontAndSize(hpage, font.GetHandle(), size);
    }

    public void SetTextRenderingMode(HPdfTextRenderingMode  mode) {
        HPDF_Page_SetTextRenderingMode(hpage, mode);
    }

    public void SetTextRaise(float  value) {
        HPDF_Page_SetTextRaise(hpage, value);
    }

    public void MoveTextPos(float x, float y) {
        HPDF_Page_MoveTextPos(hpage, x, y);
    }

    public void MoveTextPos2(float x, float y) {
        HPDF_Page_MoveTextPos2(hpage, x, y);
    }

    public void SetTextMatrix(float a, float b, float c, float d, float x, float y) {
        HPDF_Page_SetTextMatrix(hpage, a, b, c, d, x, y);
    }

    public void MoveToNextLine() {
        HPDF_Page_MoveToNextLine(hpage);
    }

    public void ShowText(string text) {
        HPDF_Page_ShowText(hpage, text);
    }

    public void ShowTextNextLine(string text) {
        HPDF_Page_ShowTextNextLine(hpage, text);
    }

    public void ShowTextNextLineEx(float word_space, float char_space,
                string text) {
        HPDF_Page_ShowTextNextLineEx(hpage, word_space, char_space, text);
    }

    public void SetGrayFill(float gray) {
        HPDF_Page_SetGrayFill(hpage, gray);
    }

    public void SetGrayStroke(float gray) {
        HPDF_Page_SetGrayStroke(hpage, gray);
    }
